feat: add start game functionality
